--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,26 @@
   box-sizing: border-box;
 }
 
+.modal-heading-container {
+  display: flex;
+  align-items: center !important;
+}
+
+.modal-img {
+  top:5px;
+  left:10px;
+  width:50px;
+}
+
+.modal-heading {
+  font-weight: bold;
+  font-size:1.5rem;
+}
+
+.form-label {
+  font-weight: 700 !important;
+}
+
+.form-date-container {
+  margin-top: 15px !important;
+}
